--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "all": "^0.0.0",
+    "axios": "^1.2.1",
     "expo": "~47.0.9",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
