--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,2 @@
-WEATER_API=https://api.openweathermap.org/data/2.5/weather
-WEATER_API_ID=488236362aa6cf71283d2819543a1eb0
+WEATHER_API=https://api.openweathermap.org/data/2.5/weather
+WEATHER_API_ID=488236362aa6cf71283d2819543a1eb0
