--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,4 @@
-WEATHER_API=https://api.openweathermap.org/data/2.5/weather
+WEATHER_API=https://api.openweathermap.org/data/2.5
 WEATHER_API_ID=488236362aa6cf71283d2819543a1eb0
+ICON_URL=http://openweathermap.org/img/wn/
+
