--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "all": "^0.0.0",
     "axios": "^1.2.1",
     "expo": "~47.0.9",
+    "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "^5.1.4",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6"
